--- a/setup.yml
+++ b/setup.yml
@@ -76,7 +76,7 @@
 
     - name: Update Hostname
       hostname:
-        name: "WirelessHome"
+        name: "WirelessHome-{{ 100 | random }}"
 
     - name: Install Docker
       shell: curl -fsSL https://get.docker.com | bash
